Revert "fix z-index of header"
This reverts commit 40f78a58f891b73579b8124d1cece53abce9a0f2.

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -5,7 +5,6 @@
   left: 0;
   right: 0;
   position: fixed;
-  z-index: 999;
   display: flex;
   height: $header-height;
 
